j-starter-deployment-intenal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j-starter-deployment
  labels:
    app: j-starter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j-starter
  template:
    metadata:
      labels:
        app: j-starter
    spec:
      containers:
      - name: j-starter
        image: j-starter:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: j-starter-service
spec:
  selector:
    app: j-starter
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
