ingress-jstarter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-jstarter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: vp.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: j-starter-service-node
                port:
                  number: 80
